# deacon

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
deacon/: Cargo.toml
deacon-config/: Cargo.toml
deacon-config/src/: lib.rs
deacon-engine/: Cargo.toml
deacon-engine/src/: lib.rs
deacon-parse/: Cargo.toml
deacon-parse/src/: README.md  function.rs  lib.rs  types.rs  variable.rs
deacon/src/: env.rs  main.rs  util.rs
deacon/src/commands/: mod.rs
deacon/src/integrations/: git.rs  mod.rs
devcon/: Cargo.toml
devcon/src/: commands.rs  env.rs  main.rs  util.rs
devcon/src/commands/: mod.rs
devcon/src/integrations/: rust.rs
docs/: error-index.md
examples/: e1.dc
