[package]
name = "devcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.0.0"
miette = { version = "5.5.0", features = ["fancy"] }
anyhow = "1.0.66"
ansi_term = "0.12.1"
guess_host_triple = "0.1.3"
whoami = "1.2.3"